add input elems

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <body>
 	<div class="lines">
 		<span class="fillin">Fill in the blank.</span>
-		Line 1 line 1 line 1 line 1 line 1 ___.<br/>
-		Line 2 line 2 line 2 line 2 line 2 ___.<br/>
-		Line 3 line 3 line 3 line 3 line 3 ___.<br/>
+		Line 1 line 1 line 1 line 1 line 1 <input class="line-input" placeholder="___" size=3 />.<br/>
+		Line 2 line 2 line 2 line 2 line 2 <input class="line-input" placeholder="______" size=6 />.<br/>
+		Line 3 line 3 line 3 line 3 line 3 <input class="line-input" placeholder="___" size=3 />.<br/>
 	</div>
-	<div class="actions">
+	<div class="action">
 		<span class="button">copy my lines</div>
 	</div>
 	<div class="footer">
-		&copy; 2021 Kumiko Kashii | Show most recent question
+		&copy; 2021 Kumiko Kashii
 	</div>
 </body>
 </html>
